@@ -5,6 +5,7 @@ Version development
   * GTK Version check
   * add accels only for SourceView editor
   * export document as HTML
+  * using WebKit2 engine
 
 Version 1.0.1 - 14.07.2016 09:08
 
